[package]
authors = ["Weiyuan Wu <youngw@sfu.ca>"]
description = "Utility functions/traits for calling Solana smart contracts."
edition = "2018"
license = "MIT"
name = "gfx-solana-utils"
readme = "README.md"
repository = "https://github.com/GooseFX1/gfx-solana-utils"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.18"
anchor-lang = "0.18"
anyhow = "1"
bs58 = "0.4"
fehler = "1"
num-traits = "0.2"
once_cell = "1"
shellexpand = "2"
solana-account-decoder = "1"
solana-client = "1"
solana-sdk = "1"
spl-associated-token-account = "1"
spl-token = "3"
