[package]
authors = ["Weiyuan Wu <youngw@sfu.ca>"]
description = "Utility functions/traits for calling Solana smart contracts."
edition = "2021"
license = "MIT"
name = "gfx-solana-utils"
readme = "README.md"
repository = "https://github.com/GooseFX1/gfx-solana-utils"
version = "0.3.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.25"
anchor-lang = "0.25"
anyhow = "1"
bs58 = "0.4"
bytemuck = "1"
fehler = "1"
num-traits = "0.2"
once_cell = "1"
shellexpand = "2"
solana-account-decoder = "1.10"
solana-client = "1.10"
solana-sdk = "1.10"
spl-associated-token-account = "1"
spl-token = "3"
