[package]
authors = ["Weiyuan Wu <weiyuan@crows.land>"]
description = "Utility functions/traits for calling Solana smart contracts."
edition = "2021"
license = "MIT"
name = "gfx-solana-utils"
readme = "README.md"
repository = "https://github.com/GooseFX1/gfx-solana-utils"
version = "0.4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.29"
anchor-lang = "0.29"
anyhow = "1"
bs58 = "0.5"
bytemuck = "1"
fehler = "1"
num-traits = "0.2"
once_cell = "1"
shellexpand = "3"
solana-account-decoder = "1.16"
solana-client = "1.16"
solana-sdk = "1.16"
spl-associated-token-account = "2"
spl-token = "4"
